--- a/src/Components/Card.css
+++ b/src/Components/Card.css
@@ -6,6 +6,9 @@
     opacity: 0.7;
     text-align: center;
     margin-bottom: 40px;
+    display: flex;
+    flex-flow: column wrap;
+    justify-content: space-evenly;
 }
 
 .cardContainer {
